Quick fix, found a solution for the current selected style image from jumping around.

--- a/client/src/css-modules/overview-style-select.module.css
+++ b/client/src/css-modules/overview-style-select.module.css
@@ -7,13 +7,6 @@
   padding: 3%;
 }
 
-.thumbnail {
-  width: 100px;
-  height: 100px;
-  display: inline-block;
-  padding: 3%;
-}
-
 .thumbnailSelected {
   grid-area: 1 / 1 / 3 / 4;
   width: 100px;
